# LearnOpenGL

./: CMakeLists.txt
include/: Shader.h  common.h  fmt  glm
include/glad/: glad.h
shader/: matrix.fs  matrix.vs  triangle.fs  triangle.vs
src/: Shader.cpp  Shader.h  Texture.cpp  glad.c  main.cpp
